Increase memory limit for gradle test run.